issue: Adjust alignment of labels at issue listing

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -3681,6 +3681,7 @@ label.issue-item-row {
         line-height: 20px;
         font-size:12px;
         color:#999;
+        overflow: hidden;
 
         .infos-item {
             margin-right:6px;
